# openclaw-searxng-plus

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README.zh-TW.md  docker-compose.deploy.yml  docker-compose.yml  pyproject.toml
benchmark/: bench.py
config/: ad_patterns.txt
config/searxng/: settings.yml
docs/: DESIGN.md
docs/superpowers/plans/: 2026-03-14-search-crawl-platform.md
docs/superpowers/specs/: 2026-03-14-content-extraction-design.md  2026-03-14-search-crawl-platform-design.md
gateway/: app.py  cache.py  config.py  content_extractor.py  content_fetcher.py  crawl_client.py  deduplicator.py  job_manager.py  map_client.py  models.py  normalizer.py  reranker.py  robots.py  sanitizer.py  searxng_client.py  security.py  site_crawler.py
skill/yuuzu-search/: SKILL.md
skill/yuuzu-search/references/: runbook.md
skill/yuuzu-search/scripts/: crawl_request.sh  map_request.sh  search_request.sh
tests/: conftest.py  test_api.py  test_content_extractor.py  test_deduplicator.py  test_job_manager.py  test_map.py  test_normalizer.py  test_reranker.py  test_robots.py  test_sanitizer.py  test_security.py  test_site_crawler.py
